<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BillsActivity"
    android:theme="@style/AppTheme"
    android:background="#23FF9800">

    <CheckBox
        android:id="@+id/checkBox15"
        android:layout_width="30dp"
        android:layout_height="43dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView27"
        app:layout_constraintEnd_toStartOf="@+id/textView20"
        app:layout_constraintTop_toTopOf="@+id/textView27" />

    <EditText
        android:id="@+id/textView27"
        android:layout_width="200dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="#E6E4E4"
        android:fontFamily="casual"
        android:textAlignment="textStart"
        android:textColor="#673AB7"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24"
        android:inputType="" />

    <EditText
        android:id="@+id/textView28"
        android:layout_width="75dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:background="#E6E4E4"
        android:fontFamily="casual"
        android:inputType=""
        android:text="0"
        android:textAlignment="center"
        android:textColor="#673AB7"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView27"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toTopOf="@+id/textView27" />

    <CheckBox
        android:id="@+id/checkBox14"
        android:layout_width="30dp"
        android:layout_height="43dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView24"
        app:layout_constraintEnd_toStartOf="@+id/textView20"
        app:layout_constraintTop_toTopOf="@+id/textView24" />

    <EditText
        android:id="@+id/textView24"
        android:layout_width="200dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="#E6E4E4"
        android:fontFamily="casual"
        android:textAlignment="textStart"
        android:textColor="#673AB7"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22"
        android:inputType="text" />

    <EditText
        android:id="@+id/textView25"
        android:layout_width="75dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:background="#E6E4E4"
        android:fontFamily="casual"
        android:inputType="text"
        android:text="0"
        android:textAlignment="center"
        android:textColor="#673AB7"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView24"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toTopOf="@+id/textView24" />

    <CheckBox
        android:id="@+id/checkBox13"
        android:layout_width="30dp"
        android:layout_height="43dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView22"
        app:layout_constraintEnd_toStartOf="@+id/textView20"
        app:layout_constraintTop_toTopOf="@+id/textView22" />

    <EditText
        android:id="@+id/textView22"
        android:layout_width="200dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="#E6E4E4"
        android:fontFamily="casual"
        android:textAlignment="textStart"
        android:textColor="#673AB7"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20"
        android:inputType="text" />

    <EditText
        android:id="@+id/textView23"
        android:layout_width="75dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:background="#E6E4E4"
        android:fontFamily="casual"
        android:inputType="text"
        android:text="0"
        android:textAlignment="center"
        android:textColor="#673AB7"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView22"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toTopOf="@+id/textView22" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:fontFamily="casual"
        android:text="@string/upcoming_bills"
        android:textColor="#673AB7"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="44dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/bank" />

    <EditText
        android:id="@+id/textView20"
        android:layout_width="200dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="#E6E4E4"
        android:fontFamily="casual"
        android:textAlignment="textStart"
        android:textColor="#673AB7"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <EditText
        android:id="@+id/textView21"
        android:layout_width="75dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:background="#E6E4E4"
        android:fontFamily="casual"
        android:text="0"
        android:textAlignment="center"
        android:textColor="#673AB7"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView20"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toTopOf="@+id/textView20" />

    <CheckBox
        android:id="@+id/checkBox12"
        android:layout_width="30dp"
        android:layout_height="43dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView20"
        app:layout_constraintEnd_toStartOf="@+id/textView20"
        app:layout_constraintTop_toTopOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:layout_marginEnd="65dp"
        android:fontFamily="casual"
        android:gravity="center_horizontal"
        android:text="@string/total"
        android:textColor="#673AB7"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <TextView
        android:id="@+id/textViewTotal"
        android:layout_width="77dp"
        android:layout_height="30dp"
        android:background="#00FFEB3B"
        android:inputType="number"
        android:textColor="#673AB7"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView26"
        app:layout_constraintStart_toEndOf="@+id/textView26"
        app:layout_constraintTop_toTopOf="@+id/textView26" />

    <Button
        android:id="@+id/button4"
        android:layout_width="114dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:text="@string/calculate"
        android:onClick="calcTotal"
        app:layout_constraintEnd_toEndOf="@+id/textView27"
        app:layout_constraintStart_toStartOf="@+id/textView27"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />
</androidx.constraintlayout.widget.ConstraintLayout>